test_suite5/ALAN/test_suite/alan-2022-examples/failing/000240_mutation.alan
source s <= function Flm() begin relax end begin relax end
